# Javapro

./: e -i HEAD~5  y.py  y.sh  yes  yes.pub
.github/workflows/: main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: engine_launcher.sh
app/src/main/cpp/: CMakeLists.txt  fps_core.cpp  system_info.cpp
app/src/main/java/com/javapro/: FpsCounter.kt  FpsService.kt  MainActivity.kt
app/src/main/java/com/javapro/ads/: AdManager.kt
app/src/main/java/com/javapro/fps/: IFpsProvider.kt  PersistentSuShell.kt  RootFpsProvider.kt  ShizukuFpsProvider.kt
app/src/main/java/com/javapro/service/: BatteryMonitorService.kt  ScreenRecordService.kt
app/src/main/java/com/javapro/spoof/: SpoofDevice.kt  SpoofExecutor.kt
app/src/main/java/com/javapro/ui/: MainScreen.kt
app/src/main/java/com/javapro/ui/components/: DailyRewardDialog.kt  NavBarComponents.kt
app/src/main/java/com/javapro/ui/screens/: BatteryScreen.kt  CloudConfigsScreen.kt  DailyRewardScreen.kt  DeviceSpoofScreen.kt  (+10 more)
app/src/main/java/com/javapro/utils/: BatteryExecutor.kt  DailyRewardManager.kt  ExclusiveExecutor.kt  GoogleAuthManager.kt  PreferenceManager.kt  PremiumManager.kt  ShizukuManager.kt  ShizukuUserService.kt  SystemInfoReader.kt  TweakExecutor.kt  UpdateChecker.kt
app/src/main/res/layout/: overlay_fps.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
